Increases gap between bars as bugfix
Increases gap between bars to fix issue where blocks will add to to 100%
and push one down. Better future solution should be absolute positioning
or other solution.

--- a/blocks/swaggg_upload/view.css
+++ b/blocks/swaggg_upload/view.css
@@ -14,6 +14,12 @@
 	font-size: 16px;
 	line-height: 22px;
 }
+
+.swaggg-upload .error,
+.swaggg-upload .errors {
+	color: #D82525;
+}
+
 .swaggg-upload input[type=submit] {
 	font-family: MK2;
 	font-size: 19px;
